--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   path: ^1.9.0
   path_provider: ^2.1.4
   cached_network_image: ^3.4.0
+  floor: ^1.4.0
+
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +58,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
   build_runner: ^2.4.11
+  floor_generator: ^1.4.0
   freezed: ^2.5.2
   json_serializable: ^6.8.0
 
